--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -22,7 +22,12 @@
   font-style: normal;
 }
 
-h2, h2, h3, h4, h5, h6 {
+h2,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: "Space Grotesk", sans-serif;
 }
 
@@ -32,44 +37,43 @@ body {
   color: var(--neutral-50);
 }
 
-.logo {
-  font-weight: 700;
+.app {
+  display: flex;
+  gap: 1em;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .sidebar {
-  background-color: var(--neutral-950);
   width: 250px;
   height: 100vh;
+
   padding: 1rem;
-}
 
-.projects, .nav {
-  width: 100%;
-}
-
-.nav {
-  height: 100%;
-  margin-top: 4rem;
- 
   display: flex;
   flex-direction: column;
-  align-items: start;
-  gap: 1rem;
+  gap: 0.5rem;
+
+  background-color: var(--neutral-950);
+  color: var(--neutral-50);
 }
 
-.sidebar-btn {
+.sidebar-item {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  text-align: start;
   background-color: transparent;
   color: var(--neutral-50);
-  border: none;
-  font-size: 1rem;
   font-weight: 600;
+  border-radius: 4px;
+  border: none;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
   cursor: pointer;
-  width: 100%;
-  text-align: Start;
-  padding: 0.6rem 1rem;
-  border-radius: 8px;
 }
 
-.sidebar-btn:hover {
+.sidebar-item:hover {
   background-color: var(--neutral-900);
+  transition: background-color 0.2s ease-in-out;
 }
