--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -37,15 +37,15 @@ body {
   color: var(--neutral-50);
 }
 
-.app {
-  display: flex;
+#app {
+  display: grid;
+  grid-template-columns: 250px 1fr;
   gap: 1em;
   height: 100vh;
   overflow: hidden;
 }
 
 .sidebar {
-  width: 250px;
   height: 100vh;
 
   padding: 1rem;
@@ -76,4 +76,8 @@ body {
 .sidebar-item:hover {
   background-color: var(--neutral-900);
   transition: background-color 0.2s ease-in-out;
+}
+
+.tasks-container {
+  overflow-Y: auto;
 }
