--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,7 +1,15 @@
 :root {
   --neutral-50: #fafafa;
+  --neutral-400: #a3a3a3;
+  --neutral-800: #262626;
   --neutral-900: #18181b;
   --neutral-950: #0a0a0a;
+
+  --brand-color: #acff79;
+
+  --alert: #f87171;
+  --warning: #fcd34d;
+  --low: #2dd4bf;
 }
 
 * {
@@ -22,7 +30,7 @@
   font-style: normal;
 }
 
-h2,
+h1,
 h2,
 h3,
 h4,
@@ -72,17 +80,93 @@ body {
 
 .sidebar-item:hover {
   background-color: var(--neutral-900);
-  transition: background-color 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
-
-
 
 .tasks-container {
   padding: 2rem;
-  overflow-Y: auto; 
+  overflow-y: auto;
 }
 
 .tasks-content {
   margin: 4rem auto 0;
   max-width: 1000px;
+}
+
+.tasks-content__list {
+  margin-top: 2rem;
+}
+
+.task-content__row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem 0;
+  gap: 1rem;
+  border-bottom: 1px solid var(--neutral-800);
+}
+
+.task-content__row footer {
+  margin-top: 1rem;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.task-row__date {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  font-size: 12px;
+  opacity: 0.4;
+}
+
+.task-priority {
+  font-size: 12px;
+  font-weight: 500;
+}
+
+.task-priority__low {
+  color: var(--low);
+}
+
+.task-priority__medium {
+  color: var(--warning);
+}
+
+.task-priority__hight {
+  color: var(--alert);
+}
+
+.task-content__row p {
+  color: var(--neutral-400);
+  max-width: 900px;
+  margin-top: 0.5rem;
+  font-size: 0.875rem;
+}
+
+.task-btn__create {
+  font-size: 0.875rem;
+  background-color: transparent;
+  border: none;
+  color: var(--neutral-50);
+  cursor: pointer;
+}
+
+.task-btn__delete {
+  font-size: 0.875rem;
+  opacity: 0.5;
+  background-color: transparent;
+  border: none;
+  color: var(--neutral-50);
+  cursor: pointer;
+}
+
+.task-btn__delete:hover {
+  opacity: 1;
+  transition: all 0.2s ease-in-out;
+}
+.task-btn__create:hover {
+  color: var(--brand-color);
+  transition: all 0.2s ease-in-out;
 }
