--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -116,6 +116,9 @@ body {
 .task-row__date {
   display: flex;
   align-items: center;
+  border: 1px solid var(--neutral-400);
+  padding: 0.5rem;
+  border-radius: 4px;
   gap: 0.5rem;
   font-size: 12px;
   opacity: 0.4;
@@ -124,6 +127,9 @@ body {
 .task-priority {
   font-size: 12px;
   font-weight: 500;
+  border: 1px solid;
+  padding: 0.5rem;
+  border-radius: 4px;
 }
 
 .task-priority__low {
@@ -143,6 +149,7 @@ body {
   max-width: 900px;
   margin-top: 0.5rem;
   font-size: 0.875rem;
+  line-height: 150%;
 }
 
 .task-btn__create {
@@ -166,7 +173,49 @@ body {
   opacity: 1;
   transition: all 0.2s ease-in-out;
 }
+
 .task-btn__create:hover {
   color: var(--brand-color);
   transition: all 0.2s ease-in-out;
+}
+
+.task-form__container {
+  border: 1px solid var(--neutral-800);
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.task-form__fields-container {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.task-form__field {
+  background-color: transparent;
+  border: none;
+  border-radius: 4px;
+  padding: 0.5rem;
+  color: var(--neutral-50);
+  font-weight: bold;
+  font-size: 0.875rem;
+}
+
+.task-form__field:focus {
+  outline: none;
+}
+
+.task-form__field:where(textarea) {
+  font-weight: normal; /* Apenas para garantir que não seja bold */
+}
+
+.show {
+  display: initial;
+}
+
+.hidden {
+  display: none;
 }
