--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -279,3 +279,17 @@ option {
   color-scheme: dark;
   font-size: 0.875rem;
 }
+
+@media (max-width: 780px) {
+  .task-form__footer {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0.5rem;
+  }
+
+  .task-form__group, .input-date {
+    width: 100%;
+  }
+}
+
+
